--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/rstacruz/jsdom-global/issues"
   },
   "devDependencies": {
-    "jsdom": "~10.0.0",
+    "jsdom": "git@github.com:davidmurdoch/jsdom.git",
     "standard": "~10.0.2",
     "tape": "~4.6.3"
   },
@@ -21,7 +21,7 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "jsdom": ">=10.0.0"
+    "jsdom": "git@github.com:davidmurdoch/jsdom.git"
   },
   "repository": {
     "type": "git",
